[package]
authors = ["Douglas Yau <dy@coradoya.com>"]
description = "Bindings for charls"
edition = "2021"
keywords = ["charls", "libcharls", "image", "jpegls"]
homepage = "https://github.com/coradoya/charls-rs"
repository = "https://github.com/coradoya/charls-rs"
license = "MIT"
name = "charls"
readme = "README.md"
version = "0.2.1"

[dependencies]
charls-sys = "2.4.2"

[features]
default = []
static = ["charls-sys/static"]
