[package]
authors = ["Douglas Yau <dy@coradoya.com>"]
description = "Bindings for CharLS, the JPEG-LS implementation"
edition = "2021"
keywords = ["charls", "libcharls", "image", "jpegls"]
repository = "https://github.com/coradoya/charls-rs"
license = "MIT"
name = "charls"
readme = "README.md"
version = "0.2.2"

[dependencies]
charls-sys = "2.4.2"

[features]
default = []
static = ["charls-sys/static"]
